fix: overflow issue, min screensize 350px

--- a/Frontend/react/src/style.css
+++ b/Frontend/react/src/style.css
@@ -233,7 +233,7 @@ margin: 300px auto;
 .search_bar,
 .search_bar_results {
 display: flex;
-/* gap:20px; */
+gap:20px;
 width: 100%;
 }
 
